feat: update package version and enhance film addition form validation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "didar",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "A Next.js application with TypeScript and Tailwind CSS",
   "private": true,
   "scripts": {
     "dev": "next dev",
